--- a/package.json
+++ b/package.json
@@ -19,10 +19,14 @@
     "@react-jvectormap/world": "^1.1.2",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/postcss": "^4.1.17",
+    "@types/pg": "^8.16.0",
     "apexcharts": "^4.7.0",
     "autoprefixer": "^10.4.22",
+    "bcryptjs": "^3.0.3",
     "flatpickr": "^4.6.13",
+    "jsonwebtoken": "^9.0.3",
     "next": "16.0.10",
+    "pg": "^8.16.3",
     "react": "^19.2.0",
     "react-apexcharts": "^1.8.0",
     "react-dnd": "^16.0.1",
@@ -35,6 +39,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
     "@svgr/webpack": "^8.1.0",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20.19.25",
     "@types/react": "^19.2.1",
     "@types/react-dom": "^19.2.1",
